5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1716_2505.log
== TEST (2019-05-14 16:36:45) 
-- CODE:
from math import*
x=eval(input(" "))
k=int(input(" "))
contador=1
sinal=-1
soma=x
expoente=3
while(contador<k):
	resultado=resultado+(sinal*(x**expoente/fatorial(expoente)))
	sinal=sinal*(-1)
	contador=contador+1
print(resultado)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    resultado=resultado+(sinal*(x**expoente/fatorial(expoente)))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:37:53) 
-- CODE:
from math import*
x=eval(input(" "))
k=int(input(" "))
contador=1
sinal=-1
soma=x
expoente=3
while(contador<k):
	resultado=resultado+(sinal*(x**expoente/fatorial(expoente)))
	sinal=sinal*(-1)
	contador=contador+1
print(round(soma,10))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    resultado=resultado+(sinal*(x**expoente/fatorial(expoente)))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:38:20) 
-- CODE:
from math import*
x=eval(input(" "))
k=int(input(" "))
contador=1
sinal=-1
soma=x
expoente=3
while(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	contador=contador+1
print(round(soma,10))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
NameError: name 'resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:39:03) 
-- CODE:
from math import*
x=eval(input(" "))
k=int(input(" "))
contador=1
sinal=-1
soma=x
expoente=3
resultado=x
while(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	contador=contador+1
print(round(soma,10))
	

-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:20) 
-- CODE:
from math import*
x=eval(input(" "))
k=int(input(" "))
contador=1
sinal=-1
soma=x
resultado=x
expoente=3

while(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	contador=contador+1
print(round(soma,10))
	

-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:41:11) 
-- CODE:
from math import*
x=eval(input(" "))
k=int(input(" "))
contador=1
sinal=-1
resultado=x
expoente=3

while(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	contador=contador+1
print(round(soma,10))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(soma,10))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:42:14) 
-- CODE:
from math import*
x=eval(input(" "))
k=int(input(" "))
contador=1
sinal=-1
resultado=x
expoente=3

while(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	contador=contador+1
print(round(resultado,10))
	

-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:42:55) 
-- CODE:
from math import*
x=eval(input(" "))
k=int(input(" "))
contador=1
sinal=-1
resultado=x
expoente=3

while(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	expoente=expoente+2
	contador=contador+1
print(round(resultado,10))
	

-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:43:03) 
-- CODE:
from math import*
x=eval(input(" "))
k=int(input(" "))
contador=1
sinal=-1
resultado=x
expoente=3

while(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	expoente=expoente+2
	contador=contador+1
print(round(resultado,10))
	

-- EXECUTION TIME:
0.192048
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
